k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bug-reporting-api
  labels:
    app: bug-reporting-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: bug-reporting-api
